--- a/ProAcc/Views/PhaseMaster/Index.cshtml
+++ b/ProAcc/Views/PhaseMaster/Index.cshtml
@@ -68,7 +68,10 @@
 
 <div id="PhaseCreate">
     @Html.Partial("_Phasecreate", "PhaseMaster")
-    @Html.Partial("_PhaseIndex", "PhaseMaster")
+    @*@Html.Partial("_PhaseIndex", "PhaseMaster")*@
+    <div id="divPhaseList">
+        
+    </div>
 </div>
 @*<div id="ApplicationA">
         @Html.Partial("_ApplicationAreaCreate", "ApplicationAreaMaster")
@@ -92,6 +95,30 @@
     </div>
 
 
+
+<script>
+    function loadPhases() {
+
+        $.ajax({
+            type: "GET",
+            url: '@Url.Action("GetPhaseList", "PhaseMaster")',
+
+            success: function (response) {
+            $("#divPhaseList").html(response);
+            },
+            failure: function (response) {
+            alert(response.responseText);
+            },
+            error: function (response) {
+            alert(response.responseText);
+            }
+         });
+    }
+
+    $(document).ready(function () {
+        loadPhases();
+    })
+</script>
 
 <script type="text/javascript">
 
