--- a/ProAcc/Views/User/ResourceAllocationCreate.cshtml
+++ b/ProAcc/Views/User/ResourceAllocationCreate.cshtml
@@ -20,15 +20,22 @@
     <script src="~/Asset/Scripts/MultiSelect/jquery.dropdown.js"></script>*@
 @*<script src="~/Asset/Scripts/MultiSelect/jquery.dropdown.min.js"></script>*@
 
-<link href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet" />
-    <link href="~/Asset/Scripts/MultiSelect/MUl/jquery.multiselect.css" rel="stylesheet" />
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="~/Asset/Scripts/MultiSelect/MUl/jquery.multiselect.js"></script>
+@*<link href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet" />*@
+<link href="~/Asset/Jquery/jquery-ui.css" rel="stylesheet" />
+<link href="~/Asset/Scripts/MultiSelect/MUl/jquery.multiselect.css" rel="stylesheet" />
+@*<script src="https://code.jquery.com/jquery-1.12.4.js"></script>*@
+@*<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>*@
+<script src="~/Asset/Jquery/jquery-ui.js"></script>
+<script src="~/Asset/Scripts/MultiSelect/MUl/jquery.multiselect.js"></script>
 
-    @*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.12/js/bootstrap-multiselect.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.12/js/bootstrap-multiselect.min.js"></script>*@
+@*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.12/js/bootstrap-multiselect.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.12/js/bootstrap-multiselect.min.js"></script>*@
+
+
+<link href="~/Asset/Scripts/Datatable/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+<script src="~/Asset/Scripts/Datatable/jquery.dataTables.min.js"></script>
+<script src="~/Asset/Scripts/Datatable/dataTables.bootstrap4.min.js"></script>
 
 
 <a class="card-title">Create </a>
@@ -56,54 +63,92 @@
                            "Select a Customer", new { id = "IDProject", @class = "form-control" })
                 }
             </div>
-            <div class="col-md-4">
+            <div class="col-md-2">
+                <label class="">.</label>
+                <button class=" btn btn-primary form-control" id="GetUsers">
+                    Get User's
+                </button>
+            </div>
+
+            @*<div class="container-fluid">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <label for="select1">Test 1 - Binding to simple arrays</label>
+                            <br />
+                            <select id="select1" multiple="multiple" class="form-control" data-bind="options: availableValues,
+                                    selectedOptions: selectedValues, multiselect: {includeSelectAllOption: true}">
+                            </select>
+                        </div>
+                        <div class="col-sm-6">
+                            <label for="select2">Test 2 - Binding to objects</label>
+                            <br />
+                            <select id="select2" multiple="multiple" class="form-control" data-bind="options: availableObjects,
+                                    optionsText: 'name', optionsValue: 'id', selectedOptions: selectedIds, multiselect: {includeSelectAllOption: true}">
+                            </select>
+                        </div>
+                    </div>
+                    <div class="row" style="margin-top: 20px;">
+                        <div class="col-sm-12">
+                            <pre id="koDebugData" data-bind="text: ko.toJSON($root, null, 4)"></pre>
+                        </div>
+                    </div>
+                </div>*@
+
+            @*<div class="col-sm-4">
+                    <div class="text-info">Multi-select+JSON+Token Mode</div><br>
+                    <div class="dropdown-mul-1">
+                        <select style="display:none" name="" id="" multiple placeholder="Select"> </select>
+                    </div>
+                </div>*@
+            @*<div class="col-md-2">
+                    <label for="exampleEmail" class="">Instance Name</label>
+                    @Html.DropDownList("Instance", new SelectList(Enumerable.Empty<SelectListItem>(), "IDInstance", "InstanceName"),
+                    "-Select-", new { id = "IDInstance", @class = "form-control" })
+                </div>*@
+
+        </div>
+        <div class="row" id="div2">
+            <div class="col-md-6">
                 <label>User</label>
                 <select name="langOpt[]" multiple="multiple" id="langOpt" class="form-control"></select>
             </div>
-            @*<div class="container-fluid">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <label for="select1">Test 1 - Binding to simple arrays</label>
-                        <br />
-                        <select id="select1" multiple="multiple" class="form-control" data-bind="options: availableValues, 
-                                selectedOptions: selectedValues, multiselect: {includeSelectAllOption: true}">
-                        </select>
-                    </div>
-                    <div class="col-sm-6">
-                        <label for="select2">Test 2 - Binding to objects</label>
-                        <br />
-                        <select id="select2" multiple="multiple" class="form-control" data-bind="options: availableObjects,
-                                optionsText: 'name', optionsValue: 'id', selectedOptions: selectedIds, multiselect: {includeSelectAllOption: true}">
-                        </select>
-                    </div>
-                </div>
-                <div class="row" style="margin-top: 20px;">
-                    <div class="col-sm-12">
-                        <pre id="koDebugData" data-bind="text: ko.toJSON($root, null, 4)"></pre>
-                    </div>
-                </div>
-            </div>*@
-
-            @*<div class="col-sm-4">
-            <div class="text-info">Multi-select+JSON+Token Mode</div><br>
-            <div class="dropdown-mul-1">
-                <select style="display:none" name="" id="" multiple placeholder="Select"> </select>
-            </div>
-        </div>*@
-            @*<div class="col-md-2">
-            <label for="exampleEmail" class="">Instance Name</label>
-            @Html.DropDownList("Instance", new SelectList(Enumerable.Empty<SelectListItem>(), "IDInstance", "InstanceName"),
-            "-Select-", new { id = "IDInstance", @class = "form-control" })
-        </div>*@
             <div class="col-md-2">
                 <label class="">.</label>
-                <button class="btn-wide mb-2 mr-2 btn btn-primary form-control" id="SubmitInstance">
-                    Select User's
+                <button class="btn-wide mb-2 mr-2 btn btn-primary form-control" id="Submit">
+                    Submit User's
                 </button>
             </div>
         </div>
     </div>
 </div>
+<div style="width:100%;">
+
+
+    <div class="" style="font-size:12px !important">
+
+
+        <table id="Table" class="table table-striped table-bordered dataTable">
+            <thead>
+                <tr>
+                    <th>ProjName</th>
+                    <th>CustomerName </th>
+                    <th>UserName </th>
+                    @*<th>Title </th>
+                        <th>Lob Technology</th>
+                        <th>Business Area </th>
+                        <th>Catetory </th>
+                        <th>Component </th>
+                        <th>Status </th>
+                        <th>Note</th>
+                        <th>Application Area</th>*@
+
+                </tr>
+            </thead>
+
+        </table>
+    </div>
+</div>
+
 
 <script>
      $('#IDCustomer').change(function () {
@@ -133,8 +178,8 @@
                         }));
                     });
                     $("#IDProject").prop("disabled", false);
-                    $("#IDInstance").prop("disabled", true);
-                    $('#SubmitInstance').prop("disabled", true);
+                    //$("#IDInstance").prop("disabled", true);
+                    $('#Submit').prop("disabled", false);
                 },
                 error: function (a) {
                     debugger;
@@ -142,7 +187,7 @@
                 }
             });
         });
-    $('#IDProject').change(function () {
+    @*$('#IDProject').change(function () {
 
             var id = $(this).val();
 			$('#SubmitInstance').prop("disabled", true);
@@ -189,17 +234,22 @@
                 } else {
 					$('#SubmitInstance').prop("disabled", false);
                 }
-            });
-    $('#SubmitInstance').click(function () {
-        var IDInstance = $("#IDInstance").val();
+            });*@
+    $('#Submit').click(function () {
+        var IDS = $("#langOpt").val();
+        IDS = IDS.toString();
+
+        var PID = $("#IDProject").val();
+        debugger;
+
          $.ajax({
                     //url: '<%: Url.Action("Upload")%>?Cust_ID=' + Cust_ID + '&IDProject=' + IDProject+'&InstanceID='+InstanceID,
-                 url: '@Url.Action("SubmitInstance", "Home")',
+                 url: '@Url.Action("SubmitResource", "User")',
                  type: "POST",
-                 data: { 'IDInstance': IDInstance },
+                 data: { 'IDS': IDS ,'PtojectId':PID},
                  success: function (result) {
-                     alert("New Live Instance updated");
-                     LoadTable(IDInstance);
+                     //alert("New Live Instance updated");
+                     //LoadTable(IDInstance);
                      //location.reload();
                  }
                 });
@@ -301,17 +351,76 @@
 </script>
 
 <script type="text/javascript">
+    $('#GetUsers').click(function () {
+        var projID = $('#IDProject').val();
+        $('#Table').DataTable({
+            "ajax": {
+                "url": '@Url.Action("GetResourceAllocationData","User")',
+                "type": "GET",
+                "datatype": "json",
+                "data": { "projectID": projID },
+                success: function (data) {
+//                    debugger;
+
+//                    var numbersString = data.UserId;
+////var numbersArray = numbersString.split(',');
+//                    var vendors = numbersString.split(',');
+//                    $.each(vendors, function (index, item) {
+
+//                        //you're filtering options, not the list itself
+//                        $("#langOpt > option").filter(function () {
+//                            return $(this).val() == item;
+//                        }).prop('selected', true); //use .prop, not .attr
+//                    });
+                   // var A = data;
+                    // Do whatever you want.
+                }
+            },
+            "columns": [
+                //{ "data": "Relevance" },
+                { "data": "ProjName" },
+                { "data": "CustomerName" },
+                { "data": "UserName" }
+                //{ "data": "Title" },
+                //{ "data": "Lob_Technology" },
+                //{ "data": "Business_Area" },
+                //{ "data": "Catetory" },
+                //{ "data": "Component" },
+                //{ "data": "Status" },
+                //{ "data": "Note"},
+                //{ "data": "Application_Area" }
+                //{ "data": "Summary" }
+                //{ "data": "S_No" },
+                //{ "data": "Custom_Code_Topic" },
+                //{ "data": "Status" },
+                //{ "data": "Application_Component" }
+                //{ "data": "AlternatePhone" },
+                //{ "data": "Email" }
+            ]
+        });
+        $('#div2').show();
+        $('#Table').show();
+        $("#GetUsers").attr("disabled", true);
+    });
+    $('#IDProject').change(function () {
+        $("#GetUsers").attr("disabled", false);
+    });
+
+    $(document).ready(function () {
+        $('#div2').hide();
+        $('#Table').hide();
+        } );
 
 //    $(function() {
-//	var viewModel = { 
-//  	availableValues: ko.observableArray(["value 1","value 2","value 3","value 4","value 5"]), 
+//	var viewModel = {
+//  	availableValues: ko.observableArray(["value 1","value 2","value 3","value 4","value 5"]),
 //    selectedValues: ko.observableArray(["value 2","value 5"]),
 //    availableObjects: ko.observableArray([{id:1,name:"object 1"}, {id:2,name:"object 2"},{id:3,name: "object 3"},{id:4,name:"object 4"},{id:5,name:"object 5"}]),
 //    selectedIds: ko.observableArray([2,5])
 //  };
-  
+
 //	ko.applyBindings(viewModel);
-    
+
 //  //Add a selected value after 2 seconds to test dynamically updating the array.
 //  setTimeout(function() {
 //  	viewModel.selectedValues.push('value 4');
