--- a/ProAcc/Views/PhaseMaster/_StatusCreate.cshtml
+++ b/ProAcc/Views/PhaseMaster/_StatusCreate.cshtml
@@ -5,7 +5,14 @@
     ViewBag.Title = "Create";
 }
 
+<style>
+    span{
+        color: red;
+    font-size: 14px;
+    }
+</style>
 <a class="card-title">Create Status</a>
+<hr />
 <div style="padding:1em;">
     <div class="row">
         <div class="col-6">
@@ -16,7 +23,10 @@
                 <label class="control-label col-md-4 required">Status Name</label>
                 <div class="col-md-10">
                     <input type="text" class="form-control" id="txtStatusName" />
-                    <span id="lblStatusName" style="color:red" />
+                    @*<span id="lblStatusName" style="color:red" />*@
+                </div>
+                <div>
+                    &nbsp;&nbsp;&nbsp;<span id="lblStatusName">&nbsp;</span>
                 </div>
             </div>
 
@@ -24,6 +34,7 @@
                 <div class="col-md-offset-2 col-md-10">
                     <input type="button" value="Create" class="btn btn-primary" id="btnStatusCreate" />
                     <input type="button" value="Update" class="btn btn-info" id="btnStatusUpdate" style="display:none" />
+                    <a class="btn btn-success" id="btnAddStatus" onclick="resetStatus();" style="display:none"><i class="fa fa-plus" onclick="resetStatus();"></i>Add New</a>
                 </div>
             </div>
 
@@ -36,16 +47,15 @@
      $(document).ready(function () {
          $("#btnStatusCreate").prop('disabled', true);
 
-         $("#txtStatusName").bind('copy paste cut', function (e) {
-            e.preventDefault();
-         });
+         //$("#txtStatusName").bind('copy paste cut', function (e) {
+         //   e.preventDefault();
+         //});
      });
 
     $("#txtStatusName").keypress(function (event) {
-        debugger;
+        
             var inputValue = event.which;
             // allow letters and whitespaces only.
-
             if (!(inputValue >= 65 && inputValue <= 122) && (inputValue != 32 && inputValue != 0)) {
                     event.preventDefault();
                     $("#lblStatusName").html("Not Allowed").show().fadeOut(2000);
@@ -53,13 +63,20 @@
         $("#btnStatusCreate").prop('disabled', false);
     });
 
+    function validatestatusname(data) {
+        
+        var letters = /^[A-Za-z, ]+$/;
+        if (!letters.test(data)) {
+            return false;
+        }
+    }
 
     $("#btnStatusCreate").on("click", function () {
-        debugger;
+        
         var StatusName = $("#txtStatusName").val().trim();
-        if (StatusName == "") {
+        if (StatusName == "" || validatestatusname(StatusName) == false) {
             //alert("Please enter the Status Name")
-            $("#lblStatusName").html("Please enter the Status Name").show().fadeOut(2000);
+            $("#lblStatusName").html("Please enter the Status Name").show().fadeOut(5000);
         }
         else {
             $.ajax({
@@ -82,7 +99,9 @@
                     success: function (response) {
                         if (response == "success") {
                             alert("Status Saved successfully!");
-                            location.reload();
+                            resetStatus();
+                            loadStatus();                            
+                            //location.reload();
                               //window.location = "/Employee/Index"
                         }
                     },
@@ -104,8 +123,9 @@
         }
     });
 
+
     $("#btnStatusUpdate").on("click", function () {
-         debugger;
+         
         var id = $("#StatusId").val();
         var StatusName = $("#txtStatusName").val().trim();
         var cre_on = $("#stacre_on").val();
@@ -117,7 +137,7 @@
              Cre_on: cre_on,
              Cre_By: cre_By
          }
-        if (StatusName == "") {
+        if (StatusName == ""|| validatestatusname(StatusName) == false) {
             //alert("Please enter the Status Name")
             $("#lblStatusName").html("Please enter the Status Name").show().fadeOut(2000);
         }
@@ -143,7 +163,9 @@
                     success: function (response) {
                         if (response == "success") {
                             alert("Status Edited successfully!");
-                            location.reload();
+                            resetStatus();
+                            loadStatus();                            
+                            //location.reload();
                         }
                     },
                     failure: function (response) {
@@ -162,4 +184,14 @@
             });
         }
     });
+
+    function resetStatus() {
+             $("#StatusId").val("");
+            $("#txtStatusName").val("");
+            $("#stacre_on").val("");
+            $("#stacre_By").val("");
+            $("#btnStatusCreate").show();
+            $("#btnStatusUpdate").hide();
+            $("#btnAddStatus").hide();
+    }
 </script>
