--- a/ProAcc/Views/PhaseMaster/_PhaseCreate.cshtml
+++ b/ProAcc/Views/PhaseMaster/_PhaseCreate.cshtml
@@ -3,34 +3,42 @@
     ViewBag.Title = "Create";
 }
 
-   
-    <a class="card-title">Create Phase</a>
-<hr />
-    <div style="padding:1em;">
-        <div class="row">
-            <div class="col-6">
-                
-                <input type="hidden" id="PhaseId" />
-                <input type="hidden" id="pcre_on" />
-                <input type="hidden" id="pcre_By" />
-                <div class="form-group">
-                    <label class="control-label col-md-4 required">Phase Name</label>
-                    <div class="col-md-10">
-                        <input type="text" class="form-control" id="txtPhaseName" />
-                        <span id="lblPhaseName" style="color:red" />
-                    </div>
-                </div>
+<style>
+    span{
+        color: red;
+    font-size: 14px;
+    }
+</style>
 
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="button" value="Create" class="btn btn-primary" id="btnPhaseCreate" />
-                        <input type="button" value="Update" class="btn btn-info" id="btnPhaseUpdate" style="display:none" />       
-                        <a class="btn btn-success" id="btnAddPhase" onclick="resetPhase();" style="display:none"><i class="fa fa-plus" onclick="resetPhase();"></i>Add New</a>
-                    </div>
+<a class="card-title">Create Phase</a>
+<hr />
+<div style="padding:1em;">
+    <div class="row">
+        <div class="col-6">
+            <input type="hidden" id="PhaseId" />
+            <input type="hidden" id="pcre_on" />
+            <input type="hidden" id="pcre_By" />
+            <div class="form-group">
+                <label class="control-label col-md-4 required">Phase Name</label>
+                <div class="col-md-10">
+                    <input type="text" class="form-control" id="txtPhaseName" />
+                    @*<span id="lblPhaseName" style="color:red" />*@
+                </div>
+                <div>
+                    &nbsp;&nbsp;&nbsp;<span id="lblPhaseName">&nbsp;</span>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="button" value="Create" class="btn btn-primary" id="btnPhaseCreate" />
+                    <input type="button" value="Update" class="btn btn-info" id="btnPhaseUpdate" style="display:none" />
+                    <a class="btn btn-success" id="btnAddPhase" onclick="resetPhase();" style="display:none"><i class="fa fa-plus" onclick="resetPhase();"></i>Add New</a>
                 </div>
             </div>
         </div>
     </div>
+</div>
 <script>
 
     $(document).ready(function () {
@@ -50,24 +58,35 @@
             $("#btnPhaseCreate").show();
             $("#btnPhaseUpdate").hide();
             $("#btnAddPhase").hide();
-        }
-   
+    }
+
     $("#txtPhaseName").keypress(function (event) {
-        debugger;
+       
             var inputValue = event.which;
             // allow letters and whitespaces only.
-          
-            if (!(inputValue >= 65 && inputValue <= 122) && (inputValue != 32 && inputValue != 0)) { 
-                    event.preventDefault(); 
+
+            if (!(inputValue >= 65 && inputValue <= 122) && (inputValue != 32 && inputValue != 0)) {
+                    event.preventDefault();
                     $("#lblPhaseName").html("Not Allowed").show().fadeOut(2000);
         }
         $("#btnPhaseCreate").prop('disabled', false);
     });
 
+
+    
+
+    function validatephasename(data) {
+       
+        var letters = /^[A-Za-z, ]+$/;
+        if (!letters.test(data)) {
+            return false;
+        }
+    }
+
     $("#btnPhaseCreate").on("click", function () {
-        debugger;
+        
         var PhaseName = $("#txtPhaseName").val().trim();
-        if (PhaseName == "") {
+        if (PhaseName == "" || validatephasename(PhaseName) == false) {
             //alert("Please enter the Phase Name")
             $("#lblPhaseName").html("Please enter the Phase Name").show().fadeOut(2000);
         }
@@ -79,7 +98,7 @@
               dataType: "json",
               success: function (data) {
                   if (data != "success") {
-                      $("#lblPhaseName").html("This Phase name is already taken,please select another").show().fadeOut(2000);
+                      $("#lblPhaseName").html("This Phase name is already taken,please select another").show().fadeOut(5000);
                       //alert("This Phase name is already taken,please select another.");
                       //$("#txtPhaseName").val("");
                   }
@@ -109,17 +128,17 @@
                   }
               },
               error: function (err) {
-                    
+
                      alert(err);
-               }        
+               }
             });
 
-        }        
+        }
     });
 
 
      $("#btnPhaseUpdate").on("click", function () {
-         debugger;
+         
          var id = $("#PhaseId").val();
         var PhaseName = $("#txtPhaseName").val().trim();
         var cre_on = $("#pcre_on").val();
@@ -131,7 +150,7 @@
              Cre_on: cre_on,
              Cre_By: cre_By
          }
-        if (PhaseName == "") {
+        if (PhaseName == ""|| validatephasename(PhaseName) == false) {
             //alert("Please enter the Phase Name")
             $("#lblPhaseName").html("Please enter the Phase Name").show().fadeOut(2000);
         }
@@ -144,7 +163,7 @@
               success: function (data) {
                   if (data != "success") {
                       $("#lblPhaseName").html("This Phase name is already in use").show().fadeOut(5000);
-                      
+
                   }
                   else {
                       $.ajax({
@@ -177,5 +196,5 @@
         }
      });
 
-    
+
 </script>
