--- a/ProAcc/Views/PhaseMaster/_TeamCreate.cshtml
+++ b/ProAcc/Views/PhaseMaster/_TeamCreate.cshtml
@@ -5,6 +5,7 @@
 }
 
     <a class="card-title">Create Role's</a>
+<hr />
 <div style="padding:1em;">
     <div class="row">
         <div class="col-6">
@@ -15,7 +16,10 @@
                 <label class="control-label col-md-4 required">Role Name</label>
                 <div class="col-md-10">
                     <input type="text" class="form-control" id="txtTeamName" />
-                    <span id="lblTeamName" style="color:red" />
+                    @*<span id="lblTeamName" style="color:red" />*@
+                </div>
+                <div>
+                    &nbsp;&nbsp;&nbsp;<span id="lblTeamName">&nbsp;</span>
                 </div>
             </div>
 
@@ -23,6 +27,7 @@
                 <div class="col-md-offset-2 col-md-10">
                     <input type="button" value="Create" class="btn btn-primary" id="btnTeamCreate" />
                     <input type="button" value="Update" class="btn btn-info" id="btnTeamUpdate" style="display:none" />
+                    <a class="btn btn-success" id="btnAddRole" onclick="resetRole();" style="display:none"><i class="fa fa-plus" onclick="resetRole();"></i>Add New</a>
                 </div>
             </div>
 
@@ -33,13 +38,13 @@
      $(document).ready(function () {
          $("#btnTeamCreate").prop('disabled', true);
 
-         $("#txtTeamName").bind('copy paste cut', function (e) {
-            e.preventDefault();
-         });
+         //$("#txtTeamName").bind('copy paste cut', function (e) {
+         //   e.preventDefault();
+         //});
      });
 
     $("#txtTeamName").keypress(function (event) {
-        //debugger;
+        
             var inputValue = event.which;
             // allow letters and whitespaces only.
 
@@ -50,12 +55,19 @@
         $("#btnTeamCreate").prop('disabled', false);
     });
 
+    function validateRolename(data) {
+        
+        var letters = /^[A-Za-z, ]+$/;
+        if (!letters.test(data)) {
+            return false;
+        }
+    }
 
     $("#btnTeamCreate").on("click", function () {
-        debugger;
+        
         var TeamName = $("#txtTeamName").val().trim();
-        if (TeamName == "") {
-            $("#lblTeamName").html("Please enter the Team Name").show().fadeOut(2000);
+        if (TeamName == ""|| validateRolename(TeamName) == false) {
+            $("#lblTeamName").html("Please enter the Valid Role").show().fadeOut(5000);
             //alert("Please enter the Team Name")
         }
         else {
@@ -66,7 +78,7 @@
               dataType: "json",
               success: function (data) {
                   if (data != "success") {
-                      $("#lblTeamName").html("This Team name is already taken,please select another").show().fadeOut(2000);
+                      $("#lblTeamName").html("This Role name is already taken,please select another").show().fadeOut(2000);
                       //alert("This Team name is already taken,please select another.");
                       //$("#txtTeamName").val("");
                   }
@@ -77,19 +89,18 @@
                     data: { RoleName: TeamName},
                     //dataType: "json",
                           success: function (response) {
-                         //debugger;
                         if (response == "success") {
-                            alert("Team Saved successfully!");
-                            location.reload();
+                            alert("Role Saved successfully!");
+                            resetRole();
+                            loadRole();
+                            //location.reload();
                               //window.location = "/Employee/Index"
                         }
                     },
                           failure: function (response) {
-                              debugger;
                        alert(response.responseText);
                     },
-                          error: function (response) {
-                         debugger;
+                          error: function (response) 
                         alert(response.responseText);
                     }
             });
@@ -105,19 +116,19 @@
     });
 
     $("#btnTeamUpdate").on("click", function () {
-         //debugger;
+         
          var id = $("#TeamId").val();
         var TeamName = $("#txtTeamName").val().trim();
         var cre_on = $("#tcre_on").val();
         var cre_By = $("#tcre_By").val();
 
          var model = {
-             Id: id,
-             TeamName: TeamName,
+             RoleId: id,
+             RoleName: TeamName,
              Cre_on: cre_on,
              Cre_By: cre_By
-         }
-        if (TeamName == "") {
+        }
+        if (TeamName == "" || validateRolename(TeamName) == false) {
             //alert("Please enter the Team Name")
             $("#lblTeamName").html("Please enter the Team Name").show().fadeOut(2000);
         }
@@ -129,7 +140,7 @@
               dataType: "json",
               success: function (data) {
                   if (data != "success") {
-                      $("#lblTeamName").html("This Team name is already taken,please select another").show().fadeOut(2000);
+                      $("#lblTeamName").html("This Role name is already in use").show().fadeOut(5000);
                       //alert("This Team name is already taken,please select another.");
                       //$("#txtTeamName").val("");
                       //location.reload();
@@ -142,8 +153,10 @@
                     //dataType: "json",
                     success: function (response) {
                         if (response == "success") {
-                            alert("Team Edited successfully!");
-                            location.reload();
+                            alert("Role Edited successfully!");
+                            //location.reload();
+                            resetRole();
+                            loadRole();
                         }
                     },
                     failure: function (response) {
@@ -162,4 +175,14 @@
             });
         }
     });
+
+     function resetRole() {
+             $("#TeamId").val("");
+            $("#txtTeamName").val("");
+            $("#tcre_on").val("");
+            $("#tcre_By").val("");
+            $("#btnTeamCreate").show();
+            $("#btnTeamUpdate").hide();
+            $("#btnAddRole").hide();
+    }
 </script>
